k8s/manifests/infrastructure/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.5.0
          ports:
            - containerPort: 9092
              name: kafka-9092
            - containerPort: 29092
              name: kafka-29092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  selector:
    app: kafka
  ports:
    - name: kafka-9092
      protocol: TCP
      port: 9092
      targetPort: 9092
    - name: kafka-29092
      protocol: TCP
      port: 29092
      targetPort: 29092
  type: NodePort  # Exposes the service on each Node's IP at a static port
