k8s/manifests/infrastructure/keycloak.yaml
#postgres-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-postgres
  template:
    metadata:
      labels:
        app: keycloak-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16.2-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---

#postgres-pv.yaml
---


#postgres-pvc.yaml
---

#postgres-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-postgres
spec:
  selector:
    app: keycloak-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
#postgres-secrets.yaml
---


#keycloak-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:23.0.6
          args: ["start"]
          ports:
            - containerPort: 8484
---


#keycloak-secrets.yaml
---

#keycloak-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 8484
      targetPort: 8484
  type: ClusterIP
---

#kubectl apply -f k8s/manifests/infrastructure/keycloak.yaml
#todo use in different namespace
